Add index page and images for layout

--- a/src/components/MusicPlayerWindow.astro
+++ b/src/components/MusicPlayerWindow.astro
@@ -1,20 +1,16 @@
-<p class="player-title">Music player</p>
+<img class="navigation-tab" alt="Music player" src="/ui/tab-player.gif" width="200" height="32" />
 <div class="player-window">
-    <iframe frameborder="0" width="200" height="200" id="player-frame" src="/player" />
+    <iframe frameborder="0" width="196" height="196" id="player-frame" src="/player" />
 </div>
 
 <style is:global>
-    .player-title {
-        background-color: darkblue;
-        color: white;
-        margin: 0;
-    }
     .player-window {
         background: #A1FFED;
         margin: 0;
         padding: 0;
         text-align: left;
         font-size: 10pt;
+        border: 2px solid #003323;
     }
     #player-frame {
         border: none;
