--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,21 @@
 --- 
 import NavigationTable from "../components/NavigationTable.astro";
 import MusicPlayerWindow from "../components/MusicPlayerWindow.astro";
+import BlurbWindow from "../components/BlurbWindow.astro";
+
+import {version} from "../../package.json";
+
+import standardCss from "../styles/layout-standard.css?url";
 
 interface Props {
 	title: string;
 }
 
 const { title } = Astro.props;
+
+const rainbowColors = ["#078D70","#26CEAA","#98E8C1","white","#7BADE2","#5049CC","#3D1A78"]
+
+
 ---
 
 <!DOCTYPE html>
@@ -18,6 +27,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+        <script src="http://code.jquery.com/jquery-1.2.1.pack.js" type="text/javascript" integrity="sha256-Z1poq2DOUGgETZpJqYnb989fBR7s6fnY8y+qHoncORI=" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<center>
@@ -28,18 +38,14 @@ const { title } = Astro.props;
 						<td colspan="3" id="site-header">
 							<center>
 								<img id="site-title" alt="The Yonic Corner" src="/yonic-corner.gif">
-								<div class="blurb-window">
-									<div class="blurb-container">
-										<marquee id="blurb-marquee">Marquee test!</marquee>
-									</div>
-								</div>
+								<BlurbWindow />
 							</center>
 						</td>
 					</tr>
 					<tr>
 						<td class="secondary-section">
 							<center>
-								<NavigationTable title="Categories" links={[
+								<NavigationTable type="category" title="Categories" links={[
 									{
 										label: "Gaming",
 										href: "/category/gaming"
@@ -65,7 +71,7 @@ const { title } = Astro.props;
 										href: "/category/miscellaneous/"
 									},
 								]}/>
-								<NavigationTable title="Search the blog" links={[
+								<NavigationTable type="search" title="Search the blog" links={[
 									{
 										label: "Series",
 										href: "/blog"
@@ -79,14 +85,12 @@ const { title } = Astro.props;
 						</td>
 						<td class="main-section">
 							<center>
-								<div id="main-article">
-									<slot />
-								</div>
+								<slot/>
 							</center>
 						</td>
 						<td class="secondary-section">
 							<center>
-								<NavigationTable title="Browse the blog" links={[
+								<NavigationTable type="browse" title="Browse the blog" links={[
 									{
 										label: "All posts",
 										href: "/blog"
@@ -102,6 +106,20 @@ const { title } = Astro.props;
 					</tr>
 				</div>
 			</table>
+			<div id="footer">
+				<div id="rainbow">
+					<img id="footer-me" src="/ui/footer-me.gif" />
+					{
+						rainbowColors.map((color) => (
+							<div class="rainbow-strip" style={{backgroundColor: color}}/>
+						))
+					}
+				</div>
+				<center>
+					<p>Yonic Corner Legacy v{version}, hosted by GitHub Pages</p>
+					<span><a href="">Source code</a> | <a href="/rss.xml">Subscribe to feed</a> (WIP)</span>
+				</center>
+			</div>
 		</center>
 	</body>
 </html>
@@ -140,18 +158,7 @@ const { title } = Astro.props;
 		padding: 0;
 		vertical-align: top;
 	}
-	.secondary-section {
-		width: 150px;
-	}
-	#main-article {
-		background: #C5FFF4;
-		border: 3px solid #009183;
-		text-align: left;
-		width: 500px;
-		margin: 0 20px;
-		padding: 20px;
-		font-size: 11pt;
-	}
+	
 	#bubbles {
 		position: absolute;
 		top: 0px;
@@ -165,24 +172,32 @@ const { title } = Astro.props;
 	#site-title {
 		margin-top: 100px;
 	}
-	.blurb-window {
-		border: 1px solid red;
-		width: 500px;
+	#rainbow {
+		position: relative;
+		margin-top: 36px;
+		padding: 0;
 	}
-	.blurb-container {
-		width: 450px;
-		border: 1px solid blue;
-        text-align: right;
+	.rainbow-strip {
+		display: block;
+		padding: 0;
+		margin: 0;
+		height: 7px;
+		/* IE adjusts size of divs based on font-size even if it's empty */
+		font-size: 0;
 	}
-    #blurb-marquee {
-        white-space: nowrap;
-    }
+	#footer {
+		font-size: 10pt;
+		background: #1b1b2f;
+		background-image: url("/ui/footer.jpg");
+		color: white;
+		padding-bottom: 24px;
+	}
+	#footer-me {
+		position: absolute;
+		top: -175px;
+		right: 0px;
+	}
+	#footer a {
+		color: deepskyblue;
+	}
 </style>
-
-<script is:inline>
-    var isFF3 = /a/[-1]=='a';
-    if(isFF3) {
-        // Hack for fixing marquee
-        document.getElementById("blurb-marquee").style.textIndent = "100%";
-    }
-</script>
