--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,65 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Window from "../components/Window.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	This is a test page.
+<Layout title="Welcome">
+	<center>
+		<img id="yonic-profile" alt="It's me, Yonic" src="/yonic-profile/summer.gif" />
+		<div class="article">
+			<p>
+				Welcome to the <i>legacy version</i> of the <b>Yonic Corner</b>!<br/>
+				This version of my blog has been made specifically for old browsers and for those who like to browse the old net while using Windows 98 or Mac Classic.
+			</p>
+			<p>
+				The contents of this version are not much different from the <a href="http://yonic-corner-astro.netlify.app/">modern version</a>,
+				but some articles from the modern version will not appear in this one due to technical limitations.
+			</p>
+			<h3>Recommended browsers</h3>
+			<noscript>
+				<style>
+					#jquery-test {
+						display: none;
+					}
+				</style>
+				<p>JavaScript is disabled, or your browser does not support it. But the blog still works fine without it!</p>
+			</noscript>
+			<p>This blog officially supports the following browsers:</p>
+			<ul>
+				<li><b>Windows:</b> Internet Explorer 5.5-7, Firefox &gt;2, Opera &gt;9</li>
+				<li><b>Mac OS:</b> Classilla 9.3.4 Beta</li>
+			</ul>
+			<p id="jquery-test">Your browser does not support jQuery. Some functions of the website may not work well.</p>
+			<p>The music player supports versions of <a href="http://archive.org/download/Adobe_Flash_Player_Complete_Collection/fpdownload.macromedia.com/get/flashplayer/installers/archive/" target="_blank">Flash Player 7 to 9.</a></p>
+			<p>If you're running a modern browser, I recommend using the modern version.</p>
+			<h3>Recommended resolution</h3>
+			<p>A resolution of 1024x768 pixels or greater is recommended to view the blog. I might try to make it look good on 800x600 in the future.</p>
+		</div>
+	</center>
 </Layout>
+
+<style is:global>
+	.article {
+		background: #C5FFF4;
+		border: 3px solid #009183;
+		text-align: left;
+		width: 500px;
+		margin: 0 20px;
+		padding: 0 20px;
+		font-size: 11pt;
+	}
+	.article a {
+		color: #1768d3;
+	}
+	.article p {
+		margin: 12pt 0;
+	}
+</style>
+
+<script is:inline>
+	var now = new Date();
+	var thisMonth = now.getMonth();
+	if(thisMonth < 3 || thisMonth >= 9) {
+		$('#yonic-profile').attr("src", "/yonic-profile/winter.gif");
+	}
+	$('#jquery-test').html("Your browser supports jQuery! Enhanced features activated!");
+</script>
