--- a/src/components/MusicPlayerWindow.astro
+++ b/src/components/MusicPlayerWindow.astro
@@ -1,6 +1,6 @@
 <img class="navigation-tab" alt="Music player" src="/ui/tab-player.gif" width="200" height="32" />
 <div class="player-window">
-    <iframe frameborder="0" width="196" height="196" id="player-frame" src="/player" />
+    <iframe frameborder="0" width="200" height="200" id="player-frame" src="/player" />
 </div>
 
 <style is:global>
@@ -11,8 +11,12 @@
         text-align: left;
         font-size: 10pt;
         border: 2px solid #003323;
+        width: 200px;
+        height: 200px;
     }
     #player-frame {
         border: none;
+        width: 100%;
+        height: 100%;
     }
 </style>
