--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from '../layouts/Layout.astro';
 				The contents of this version are not much different from the <a href="http://yonic-corner-astro.netlify.app/">modern version</a>,
 				but some articles from the modern version will not appear in this one due to technical limitations.
 			</p>
-			<h3>Recommended browsers</h3>
+			<h3>Recommended software</h3>
 			<noscript>
 				<style>
 					#jquery-test {
@@ -23,15 +23,17 @@ import Layout from '../layouts/Layout.astro';
 				</style>
 				<p>JavaScript is disabled, or your browser does not support it. But the blog still works fine without it!</p>
 			</noscript>
-			<p>This blog officially supports the following browsers:</p>
+			<p>This blog officially supports the minimal following browsers and operating systems:</p>
 			<ul>
-				<li><b>Windows:</b> Internet Explorer 5.5-7, Firefox &gt;2, Opera &gt;9</li>
-				<li><b>Mac OS:</b> Classilla 9.3.4 Beta</li>
+				<li><b>Windows 98/NT:</b> Internet Explorer 5.5, Firefox 2, K-Meleon 1.5.4, Opera 9</li>
+				<li><b>Mac OS 9:</b> Classilla 9.3.4 Beta</li>
 			</ul>
 			<p id="jquery-test">Your browser does not support jQuery. Some functions of the website may not work well.</p>
-			<p>The music player supports versions of <a href="http://archive.org/download/Adobe_Flash_Player_Complete_Collection/fpdownload.macromedia.com/get/flashplayer/installers/archive/" target="_blank">Flash Player 7 to 9.</a></p>
+			<p>
+				The music player supports versions of <a href="http://archive.org/download/Adobe_Flash_Player_Complete_Collection/fpdownload.macromedia.com/get/flashplayer/installers/archive/" target="_blank">Flash Player 7 to 9</a>.
+				Use Flash Player 9 for Windows 98 and Flash Player 7 for Mac OS 9.</p>
 			<p>If you're running a modern browser, I recommend using the modern version.</p>
-			<h3>Recommended resolution</h3>
+			<h3>Recommended screen resolution</h3>
 			<p>A resolution of 1024x768 pixels or greater is recommended to view the blog. I might try to make it look good on 800x600 in the future.</p>
 		</div>
 	</center>
@@ -43,7 +45,6 @@ import Layout from '../layouts/Layout.astro';
 		border: 3px solid #009183;
 		text-align: left;
 		width: 500px;
-		margin: 0 20px;
 		padding: 0 20px;
 		font-size: 11pt;
 	}
