Tune and fix blurb window marquee

--- a/src/components/BlurbWindow.astro
+++ b/src/components/BlurbWindow.astro
@@ -4,7 +4,7 @@
             <img src="/ui/marquee-window-left.gif" width="13" height="24" />
         </td>
         <td class="blurb-container">
-            <marquee id="blurb-marquee">Marquee test!</marquee>
+            <marquee id="blurb-marquee" scrolldelay="120" scrollamount="4">Marquee test!</marquee>
         </td>
         <td>
             <img src="/ui/marquee-window-right.gif" width="13" height="24" />
