Make the website logo into a link to home

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,9 @@ const rainbowColors = ["#078D70","#26CEAA","#98E8C1","white","#7BADE2","#5049CC"
 					<tr>
 						<td colspan="3" id="site-header">
 							<center>
-								<img id="site-title" alt="The Yonic Corner" src="/yonic-corner.gif">
+								<a href="/">
+									<img id="site-title" alt="The Yonic Corner" src="/yonic-corner.gif">
+								</a>
 								<BlurbWindow />
 							</center>
 						</td>
@@ -151,6 +153,9 @@ const rainbowColors = ["#078D70","#26CEAA","#98E8C1","white","#7BADE2","#5049CC"
         color: #056B5A;
         text-decoration: none;
     }
+	a img {
+		border: none;
+	}
 	a:hover {
 		text-decoration: underline;
 	}
