Downgrade Jquery version

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const rainbowColors = ["#078D70","#26CEAA","#98E8C1","white","#7BADE2","#5049CC"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-        <script src="http://code.jquery.com/jquery-1.2.1.pack.js" type="text/javascript" integrity="sha256-Z1poq2DOUGgETZpJqYnb989fBR7s6fnY8y+qHoncORI=" crossorigin="anonymous"></script>
+        <script src="http://code.jquery.com/jquery-1.0.4.pack.js" integrity="sha256-upOUW/O9T857epnazR8IlX1C0ZSEE19MuqWoC75KUOE=" crossorigin="anonymous"></script>
 		<!--[if gt IE 6]>-->
 		<link rel="stylesheet" type="text/css" href={standardCss}>
 		<!--<![endif]-->
