Update recommended settings

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Layout from '../layouts/Layout.astro';
 			<p>This blog officially supports the minimal following browsers and operating systems:</p>
 			<ul>
 				<li><b>Windows 98/NT:</b> Internet Explorer 5.5, Firefox 2, K-Meleon 1.5.4, Opera 9</li>
-				<li><b>Mac OS 9:</b> Classilla 9.3.4 Beta</li>
+				<li><b>Mac OS 9:</b> Netscape 7, Classilla 9.3.4 Beta</li>
 			</ul>
 			<p id="jquery-test">Your browser does not support jQuery. Some functions of the website may not work well.</p>
 			<p>
@@ -35,6 +35,7 @@ import Layout from '../layouts/Layout.astro';
 			<p>If you're running a modern browser, I recommend using the modern version.</p>
 			<h3>Recommended screen resolution</h3>
 			<p>A resolution of 1024x768 pixels or greater is recommended to view the blog. I might try to make it look good on 800x600 in the future.</p>
+			<p>As for number of colors, 256 colors is enough to see it clearly, but high color/16-bit color/thousands of colors or higher is recommended.</p>
 		</div>
 	</center>
 </Layout>
