Make Bubble API common with modern blog

--- a/src/components/bubbles/themes/Yonic.astro
+++ b/src/components/bubbles/themes/Yonic.astro
@@ -1,5 +1,5 @@
 ---
-import Bubble, {type BubbleSizings, type BubbleSpeech} from "./BubbleBase.astro";
+import Bubble, {type BubbleSizings, type BubbleSpeech} from "../BubbleBase.astro";
 
 interface Props extends BubbleSpeech {}
 
