--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,32 +54,32 @@ const rainbowColors = ["#078D70","#26CEAA","#98E8C1","white","#7BADE2","#5049CC"
 								<NavigationTable type="category" title="Categories" links={[
 									{
 										label: "Gaming",
-										href: "/category/gaming",
+										href: "/category/gaming/1",
 										icon: "/icons/category/gaming.gif"
 									},
 									{
 										label: "Dev stuff",
-										href: "/category/development",
+										href: "/category/development/1",
 										icon: "/icons/category/development.gif"
 									},
 									{
 										label: "Creative endeavours",
-										href: "/category/creations/",
+										href: "/category/creations/1",
 										icon: "/icons/category/creations.gif"
 									},
 									{
 										label: "Outdoor adventures",
-										href: "/category/outside",
+										href: "/category/outside/1",
 										icon: "/icons/category/outside.gif"
 									},
 									{
 										label: "Blog updates",
-										href: "/category/blog",
+										href: "/category/blog/1",
 										icon: "/icons/category/blog.gif"
 									},
 									{
 										label: "Miscellaneous",
-										href: "/category/miscellaneous/",
+										href: "/category/misc/1",
 										icon: "/icons/category/misc.gif"
 									},
 								]}/>
