Add series and ordered post listings

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import BlurbWindow from "../components/BlurbWindow.astro";
 import {version} from "../../package.json";
 
 import standardCss from "../styles/layout-standard.css?url";
+import "@lib/styles/global.scss";
 
 interface Props {
 	title: string;
