--- a/src/layouts/PostList.astro
+++ b/src/layouts/PostList.astro
@@ -12,159 +12,79 @@ interface Props {
     title: string,
     description?: string,
     page: Page<CollectionEntry<"blog">>,
-    category?: CategoryId
+    category?: CategoryId | "series"
 }
 
+
 const { title, description, page, category = "default" } = Astro.props;
+let baseUrl = "/blog";
+switch(category) {
+    case "default":
+        break;
+    case "series":
+        baseUrl = `/category/${category}`
+}
 ---
 <Layout {title}>
-    <div style="height: 752px">
-        <div class="listing-header">
-            <div class={category}>
-                <h1>{title}</h1>
-                {description && <p><small>{description}</small></p>}
-                <span>Showing {page.total} post{page.total !== 1 ? "s" : ""}</span>
-            </div>
-        </div>
-        <div class="post-listing">
-            {page.data.map(async (post) => {
-                let heroImage: any;
-                try {
-                    heroImage = (await import(`../assets/articles/${post.slug}/hero.png`)).default;
-                } catch(err) {
-                    heroImage = null;
-                }
-                return (<table class="post-data" cellspacing="5">
-                        <tr>
-                            <td class="hero-image">
-                                <a href={`/blog/article/${post.slug}`}>
-                                {heroImage!=null ?
-                                    <Image alt={post.data.title} src={heroImage} width="150" height="100" format="jpeg"/> : <img src={`/ui/thumbnails/${post.data.category}.gif`} alt={post.data.title} src={heroImage} width="150" height="100"/>
-                                }
-                                </a>
-                            </td>
-                            <td>
-                                <table class="data-table" style="border-collapse: collapse; border: none;">
-                                    <tr style="height: 0"><td>
-                                        <img class="category-image" title={categories[post.data.category].title} alt={categories[post.data.category].title} src={`/icons/category/${post.data.category}.gif`} width={16} height={16} />
-                                        <a href={`/blog/article/${post.slug}`}><b>{post.data.title}</b></a>
-                                    </td></td>
-                                    <tr class="description"><td>
-                                        <a href={`/blog/article/${post.slug}`}>{post.data.description.length > 145? post.data.description.slice(0,145)+"..." : post.data.description}</a>
-                                    </td></tr>
-                                </table>
-                            </td>
-                        </tr>
-                    </table>)
-            })}
-        </div>
-        <div class="page-navigator">
-            {page.currentPage > 1? <a href="/blog/1">&lt;&lt; First</a> : <span>&lt;&lt; First</span>}
-            {page.url.prev? <a href={page.url.prev}>&lt; Prev</a>:<span>&lt; Prev</span>}
-            <b>[</b>
-            {
-                [-2,-1,0,1,2].map((i) => {
-                    const pageNo = (page.currentPage+i).toString().padStart(2, "0")+(page.currentPage+i+1 > page.lastPage? "" : " ");
-                    if(i === 0) {
-                        return <b>{pageNo}</b>
-                    }
-                    else if(page.lastPage >= page.currentPage+i && page.currentPage+i >= 1) {
-                        return <a href={`/blog/${page.currentPage+i}`}>{pageNo}</b>
-                    }
-                })
-            }
-            <b>]</b>
-            {page.url.next? <a href={page.url.next}>Next &gt;</a> : <span>Next &gt;</span>}
-            {page.currentPage < page.lastPage? <a href="/blog/1">Last &gt;&gt;</a>:<span>Last &gt;&gt;</span>}
+    <div class="listing-header">
+        <div class={category}>
+            <h1>{title}</h1>
+            {description && <p><small>{description}</small></p>}
+            <span>Showing {page.total} post{page.total !== 1 ? "s" : ""}</span>
         </div>
     </div>
+    <div class="post-listing">
+        {page.data.map(async (post) => {
+            let heroImage: any;
+            try {
+                heroImage = (await import(`../assets/articles/${post.slug}/hero.png`)).default;
+            } catch(err) {
+                heroImage = null;
+            }
+            return (<div class="post-wrapper">
+                <table class="post-data" cellspacing="5">
+                    <tr>
+                        <td class="hero-image">
+                            <a href={`/blog/article/${post.slug}`}>
+                            {heroImage!=null ?
+                                <Image alt={post.data.title} src={heroImage} width="150" height="100" format="jpeg"/> : <img src={`/ui/thumbnails/${post.data.category}.gif`} alt={post.data.title} src={heroImage} width="150" height="100"/>
+                            }
+                            </a>
+                        </td>
+                        <td>
+                            <table class="data-table" style="border-collapse: collapse; border: none;">
+                                <tr style="height: 0"><td>
+                                    <img class="category-image" title={categories[post.data.category].title} alt={categories[post.data.category].title} src={`/icons/category/${post.data.category}.gif`} width={16} height={16} />
+                                    <a href={`/blog/article/${post.slug}`}><b>{post.data.title}</b></a>
+                                </td></td>
+                                <tr class="description"><td>
+                                    <a href={`/blog/article/${post.slug}`}>{post.data.description.length > 145? post.data.description.slice(0,145)+"..." : post.data.description}</a>
+                                </td></tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+                { category==="series" && <span class="number">{post.data.series!.order}</span>}
+            </div>)
+        })}
+    </div>
+    <div class="page-navigator">
+        {page.currentPage > 1? <a href="1">&lt;&lt; First</a> : <span>&lt;&lt; First</span>}
+        {page.url.prev? <a href={page.url.prev}>&lt; Prev</a>:<span>&lt; Prev</span>}
+        <b>[</b>
+        {
+            [-2,-1,0,1,2].map((i) => {
+                const pageNo = (page.currentPage+i).toString().padStart(2, "0")+(page.currentPage+i+1 > page.lastPage? "" : " ");
+                if(i === 0) {
+                    return <b>{pageNo}</b>
+                }
+                else if(page.lastPage >= page.currentPage+i && page.currentPage+i >= 1) {
+                    return <a href={(page.currentPage+i).toString()}>{pageNo}</b>
+                }
+            })
+        }
+        <b>]</b>
+        {page.url.next? <a href={page.url.next}>Next &gt;</a> : <span>Next &gt;</span>}
+        {page.currentPage < page.lastPage? <a href={page.lastPage.toString()}>Last &gt;&gt;</a>:<span>Last &gt;&gt;</span>}
+    </div>
 </Layout>
-
-<style lang="scss" is:global>
-    @use "sass:list";
-    @use "../styles/global.scss" as *;
-    #layout .post-listing {
-        display: block;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-        .post-data {
-            background: #C5FFF4;
-            border: 3px solid #009183;
-            margin-bottom: 10px;
-            text-align: left;
-            width: 500px;
-            .hero-image {
-                width: 150px;
-                img {
-                    display: block;
-                    object-fit: fill;
-                    border: 2px solid #003323;
-                }
-            }
-            a {
-                font-weight: normal;
-                overflow: hidden;
-            }
-            p {
-                margin: 0;
-                .category-image {
-                    display: inline;
-                    cursor: help;
-                }
-            }
-            table.data-table {
-                width: 100%;
-                height: 100px;
-                margin: 0;
-                .description {
-                    height: 100%;
-                    a {
-                        display: block;
-                        height: 81px;
-                        font-size: 10pt;
-                        color: black;
-                        text-decoration: none;
-                    }
-                }
-            }
-        }
-    }
-    .listing-header div {
-        background-color: #056b5a;
-        border: 3px solid #003323;
-        padding: 10px;
-        color: #a6ffee;
-        margin-bottom: 10px;
-        h1 {
-            width: 450px;
-            margin: 0;
-            margin-bottom: 10px;
-            font-size: 16pt;
-        }
-        p {
-            width: 450px;
-        }
-        span {
-            display: block;
-            width: 450px;
-        }
-    }
-    @each $category, $cat in $categories {
-        .listing-header .#{$category} {
-            background-color: list.nth($cat, 1);
-            color: list.nth($cat, 2);
-            border-color: list.nth($cat, 2);
-        }
-    }
-    .page-navigator {
-        background-color: #a5cef5;
-        border: 3px solid #1e1947;
-        padding: 5px 0px;
-        margin-top: 10px;
-        font-size: 10pt;
-        a {
-            color: #0061bd;
-        }
-    }
-</style>
