--- a/src/styles/layout-standard.css
+++ b/src/styles/layout-standard.css
@@ -22,6 +22,6 @@
     width: 146px!important;
     height: 96px!important;
 }
-.post-wrapper {
-    left: 0!important;
+.post-listing .number {
+    width: 46px!important;
 }
