--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -92,7 +92,7 @@ const rainbowColors = ["#078D70","#26CEAA","#98E8C1","white","#7BADE2","#5049CC"
 									},
 									{
 										label: "Tags",
-										href: "/tags",
+										href: "/tag",
 										icon: "/icons/tags.gif"
 									},
 								]} />
