--- a/src/components/NavigationTable.astro
+++ b/src/components/NavigationTable.astro
@@ -42,7 +42,7 @@ const {links, title, type} = Astro.props;
         margin-left: -10px;
         padding: 0;
         list-style-type: none;
-        list-style-position: inside;
+        list-style-position: outside;
     }
     .navigation img {
         vertical-align: middle;
