--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const rainbowColors = ["#078D70","#26CEAA","#98E8C1","white","#7BADE2","#5049CC"
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
         <script src="http://code.jquery.com/jquery-1.0.4.pack.js" integrity="sha256-upOUW/O9T857epnazR8IlX1C0ZSEE19MuqWoC75KUOE=" crossorigin="anonymous"></script>
-		<!--[if gt IE 6]>-->
+		<!--[if gte IE 6]><!-->
 		<link rel="stylesheet" type="text/css" href={standardCss}>
 		<!--<![endif]-->
 	</head>
@@ -187,7 +187,7 @@ const rainbowColors = ["#078D70","#26CEAA","#98E8C1","white","#7BADE2","#5049CC"
 		background-image: url("/ui/bubbles.gif");
 		background-position: top center;
 		width: 100%;
-		height: 100%;
+		height: 250px;
 	}
 	#site-title {
 		margin-top: 100px;
